fixed layout issue to be more acuurate with design

--- a/app/scss/components/productInfo.scss
+++ b/app/scss/components/productInfo.scss
@@ -20,7 +20,7 @@ main {
  
             svg {
                 * {
-                    @include transition;
+                    @include transition(fill);
                 }
 
                 &:hover * {
